{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 23,
  "lineage": "81e7238f-3a54-6454-72b6-5e58e0cd03b8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0afb1234ee0556b12",
            "domain": "vpc",
            "id": "eipalloc-0afb1234ee0556b12",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-52-220-28-161.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.220.28.161",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:862605034458:internet-gateway/igw-00a839cd5a76c4ce4",
            "id": "igw-00a839cd5a76c4ce4",
            "owner_id": "862605034458",
            "tags": {
              "Cluster": "training"
            },
            "tags_all": {
              "Cluster": "training"
            },
            "vpc_id": "vpc-0a376f631de0b8a6f"
          },
          "dependencies": [
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0afb1234ee0556b12",
            "connectivity_type": "public",
            "id": "nat-05548bccc43a70713",
            "network_interface_id": "eni-0dfb46cad5ad4aa5b",
            "private_ip": "10.0.3.197",
            "public_ip": "52.220.28.161",
            "subnet_id": "subnet-08639c4e422965447",
            "tags": {
              "Cluster": "training"
            },
            "tags_all": {
              "Cluster": "training"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public-1a",
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:862605034458:route-table/rtb-0b4d33015341bc1ba",
            "id": "rtb-0b4d33015341bc1ba",
            "owner_id": "862605034458",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-05548bccc43a70713",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Cluster": "training"
            },
            "tags_all": {
              "Cluster": "training"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a376f631de0b8a6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public-1a",
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:862605034458:route-table/rtb-017667048f52b4329",
            "id": "rtb-017667048f52b4329",
            "owner_id": "862605034458",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00a839cd5a76c4ce4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Cluster": "training"
            },
            "tags_all": {
              "Cluster": "training"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a376f631de0b8a6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00cbe4e5eccd57cad",
            "route_table_id": "rtb-0b4d33015341bc1ba",
            "subnet_id": "subnet-0d1843f1d81e654ed"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-1a",
            "aws_subnet.public-1a",
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc668b946edf4638",
            "route_table_id": "rtb-0b4d33015341bc1ba",
            "subnet_id": "subnet-08743a81cff03d9bf"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-1b",
            "aws_subnet.public-1a",
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00396213421497c16",
            "route_table_id": "rtb-017667048f52b4329",
            "subnet_id": "subnet-08639c4e422965447"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-1a",
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f39b542c963c712",
            "route_table_id": "rtb-017667048f52b4329",
            "subnet_id": "subnet-01e0f98682bcf37ef"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-1b",
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:862605034458:subnet/subnet-0d1843f1d81e654ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1843f1d81e654ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862605034458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Cluster": "training"
            },
            "tags_all": {
              "Cluster": "training"
            },
            "vpc_id": "vpc-0a376f631de0b8a6f"
          },
          "dependencies": [
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:862605034458:subnet/subnet-08743a81cff03d9bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08743a81cff03d9bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862605034458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Cluster": "training"
            },
            "tags_all": {
              "Cluster": "training"
            },
            "vpc_id": "vpc-0a376f631de0b8a6f"
          },
          "dependencies": [
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:862605034458:subnet/subnet-08639c4e422965447",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08639c4e422965447",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "862605034458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Cluster": "training"
            },
            "tags_all": {
              "Cluster": "training"
            },
            "vpc_id": "vpc-0a376f631de0b8a6f"
          },
          "dependencies": [
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:862605034458:subnet/subnet-01e0f98682bcf37ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e0f98682bcf37ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "862605034458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Cluster": "training"
            },
            "tags_all": {
              "Cluster": "training"
            },
            "vpc_id": "vpc-0a376f631de0b8a6f"
          },
          "dependencies": [
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "workshop",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:862605034458:vpc/vpc-0a376f631de0b8a6f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-037bfb043c0583b9b",
            "default_route_table_id": "rtb-07d2f03fa4ddaef7a",
            "default_security_group_id": "sg-0d031fc7beca1ce1f",
            "dhcp_options_id": "dopt-039d5cdacd575ac4a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a376f631de0b8a6f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07d2f03fa4ddaef7a",
            "owner_id": "862605034458",
            "tags": {
              "Cluster": "training"
            },
            "tags_all": {
              "Cluster": "training"
            }
          }
        }
      ]
    }
  ]
}